P3-2: rewrite jvmtop.sh for JDK 21; document §6.3-6 justified option
- Remove tools.jar existence check and classpath entry (tools.jar
  does not exist in JDK 9+ installations)
- Add -Djdk.attach.allowAttachSelf=true as default launcher option
  so jvmtop shows its own process in overview, matching original
  golden-reference behaviour (jvmtop 0.8.0 showed itself)
- Update JAVA_HOME detection to use modern POSIX sh syntax
- docs/PHASE0_ANALYSIS.md §8.2: record this as the §6.3-6
  'justified minimal launcher option'